--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "parse-duration": "^2.1.4",
     "pocketbase": "^0.26.0",
     "react": "^19.0.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1",
     "react-tuby": "^0.1.24",
