--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "humanize-duration": "^3.32.1",
     "humanize-duration-ts": "^2.1.1",
     "isbot": "^5.1.17",
+    "jotai": "^2.12.3",
     "lucide-react": "^0.503.0",
     "parse-duration": "^2.1.4",
     "pocketbase": "^0.26.0",
